--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 // colors
 $bg: #001b5a;
@@ -19,7 +20,7 @@ $phone: 768px;
 
 %text-content {
     color: $text;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     font-size: 1.5vw;
     line-height: 30px;
     @media screen and (max-width: $phone) {
@@ -71,7 +72,7 @@ section {
         color: $accent;
         padding-bottom: 35vh;
         font-size: 5vw;
-        font-family: 'Raleway', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         // text-decoration: underline;
         // text-decoration-thickness: 1px;
         // text-underline-offset: 5px;
@@ -89,6 +90,10 @@ section {
 
 .second-section {
     @extend %flex-center;
+    @media screen and (max-width: $phone) {
+        height: 60vh;
+        // border: 1px dashed greenyellow;
+    }
     .out {
         // border: 1px solid red;
         @extend %flex-center;
@@ -106,10 +111,6 @@ section {
                 @extend %text-content;
             }
         }
-    }
-    @media screen and (max-width: $phone) {
-        height: 60vh;
-        // border: 1px dashed greenyellow;
     }
 }
 
@@ -159,7 +160,7 @@ section {
 //             h1 {
 //                 color: $text;
 //                 font-size: 5vw;
-//                 font-family: 'Raleway', sans-serif;
+//                 @extend %font-family;
 //                 @media screen and (max-width: $phone) {
 //                     font-size: 10vw;
 //                 }
@@ -197,6 +198,9 @@ section {
                 @media screen and (max-width: $phone) {
                     padding-left: 0%;
                 }
+                .mono {
+                    font-family: monospace;
+                }
             }
             @media screen and (max-width: $phone) {
                 width: 100%;
@@ -211,8 +215,8 @@ section {
             }
             h1 {
                 font-size: 5vw;
+                font-family: 'Montserrat', sans-serif;
                 color: $accent;
-                font-family: "Raleway", sans-serif;
                 text-align: right;
                 padding-right: 10%;
                 @media screen and (max-width: $phone) {
@@ -245,8 +249,8 @@ section {
             h1 {
                 color: $text;
                 font-size: 5vw;
-                font-family: 'Raleway', sans-serif;
-                text-align: right   ;
+                text-align: right;
+                font-family: 'Montserrat', sans-serif;
                 @media screen and (max-width: $phone) {
                     font-size: 8vw;
                 }
@@ -278,6 +282,10 @@ section {
                 img {
                     width: 100%;
                     height: 100%;
+                    transition: transform .2s;
+                    &:hover {
+                        transform: scale(1.2);
+                    }
                 }
             }
         }
