--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 .fourth-section .contact .contact-part-2, .fourth-section .contact .contact-part-1, .fourth-section .contact, .fourth-section, .third-section .skills .right, .third-section .skills .left, .third-section .skills, .third-section, .second-section .out, .second-section, .first-section {
   display: flex;
   justify-content: center;
@@ -9,7 +10,7 @@
 
 .third-section .skills .left p, .second-section .out .in p {
   color: #fff0e1;
-  font-family: "Raleway", sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-size: 1.5vw;
   line-height: 30px;
 }
@@ -66,7 +67,7 @@ section {
   color: #ec6e00;
   padding-bottom: 35vh;
   font-size: 5vw;
-  font-family: "Raleway", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .first-section h1 span {
   color: #fff0e1;
@@ -80,6 +81,11 @@ section {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .second-section {
+    height: 60vh;
+  }
+}
 .second-section .out {
   width: 80%;
   height: 80%;
@@ -97,12 +103,6 @@ section {
     width: 100%;
   }
 }
-@media screen and (max-width: 768px) {
-  .second-section {
-    height: 60vh;
-  }
-}
-
 .third-section .skills {
   width: 80%;
   height: 80%;
@@ -134,6 +134,9 @@ section {
     padding-left: 0%;
   }
 }
+.third-section .skills .left p .mono {
+  font-family: monospace;
+}
 @media screen and (max-width: 768px) {
   .third-section .skills .left {
     width: 100%;
@@ -150,8 +153,8 @@ section {
 }
 .third-section .skills .right h1 {
   font-size: 5vw;
+  font-family: "Montserrat", sans-serif;
   color: #ec6e00;
-  font-family: "Raleway", sans-serif;
   text-align: right;
   padding-right: 10%;
 }
@@ -183,8 +186,8 @@ section {
 .fourth-section .contact .contact-part-1 h1 {
   color: #fff0e1;
   font-size: 5vw;
-  font-family: "Raleway", sans-serif;
   text-align: right;
+  font-family: "Montserrat", sans-serif;
 }
 @media screen and (max-width: 768px) {
   .fourth-section .contact .contact-part-1 h1 {
@@ -220,6 +223,10 @@ section {
 .fourth-section .contact .contact-part-3 a img {
   width: 100%;
   height: 100%;
+  transition: transform 0.2s;
+}
+.fourth-section .contact .contact-part-3 a img:hover {
+  transform: scale(1.2);
 }
 @media screen and (max-width: 768px) {
   .fourth-section {
