fix height problems

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-.fourth-section .contact .contact-part-2, .fourth-section .contact .contact-part-1, .fourth-section .contact, .fourth-section, .third-section .skills .right, .third-section .skills .left, .third-section .skills, .third-section, .second-section .out, .second-section, .first-section {
+.fourth-section .contact .contact-part-3 a, .fourth-section .contact .contact-part-2 p, .fourth-section .contact .contact-part-2, .fourth-section .contact .contact-part-1, .fourth-section .contact, .fourth-section, .third-section .skills .right, .third-section .skills .left, .third-section .skills, .third-section, .second-section .out, .second-section, .first-section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,8 +40,8 @@ body {
 }
 
 section {
-  height: 100vh;
   width: 100vw;
+  min-height: 100vh;
 }
 
 .scroll-icon {
@@ -83,7 +83,8 @@ section {
 
 @media screen and (max-width: 768px) {
   .second-section {
-    height: 60vh;
+    min-height: auto;
+    margin: 25px 0px;
   }
 }
 .second-section .out {
@@ -101,6 +102,12 @@ section {
 @media screen and (max-width: 768px) {
   .second-section .out .in {
     width: 100%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .third-section {
+    min-height: auto;
+    margin: 25px 0px;
   }
 }
 .third-section .skills {
@@ -167,14 +174,15 @@ section {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .fourth-section {
+    min-height: auto;
+    margin: 25px 0px;
+  }
+}
 .fourth-section .contact {
   width: 80%;
   height: 80%;
-}
-@media screen and (max-width: 768px) {
-  .fourth-section .contact {
-    height: 90%;
-  }
 }
 .fourth-section .contact div {
   width: 33%;
@@ -191,24 +199,23 @@ section {
 }
 @media screen and (max-width: 768px) {
   .fourth-section .contact .contact-part-1 h1 {
-    font-size: 8vw;
+    font-size: 7vw;
   }
 }
 .fourth-section .contact .contact-part-2 p {
   color: #ec6e00;
-  max-height: 100%;
   font-size: 25vw;
   font-family: "Titillium Web", sans-serif;
-}
-@media screen and (max-width: 768px) {
-  .fourth-section .contact .contact-part-2 p {
-    font-size: 45vw;
-  }
 }
 .fourth-section .contact .contact-part-3 {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+}
+@media screen and (max-width: 768px) {
+  .fourth-section .contact .contact-part-3 {
+    height: 100%;
+  }
 }
 .fourth-section .contact .contact-part-3 a {
   width: 60%;
@@ -216,21 +223,19 @@ section {
 }
 @media screen and (max-width: 768px) {
   .fourth-section .contact .contact-part-3 a {
-    width: 100%;
-    height: 9%;
+    width: auto;
   }
 }
 .fourth-section .contact .contact-part-3 a img {
-  width: 100%;
-  height: 100%;
   transition: transform 0.2s;
+  width: 100%;
 }
 .fourth-section .contact .contact-part-3 a img:hover {
   transform: scale(1.2);
 }
 @media screen and (max-width: 768px) {
-  .fourth-section {
-    height: 40vh;
+  .fourth-section .contact .contact-part-3 a img {
+    width: 100%;
   }
 }
 
