--- a/style.scss
+++ b/style.scss
@@ -108,6 +108,10 @@ section {
             }
             p {
                 @extend %text-content;
+                a {
+                    color: $accent;
+                    font-weight: bold;
+                }
             }
         }
     }
