--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ html {
 }
 
 body {
-  background-color: #28282b;
+  background-color: #1e1e21;
   overflow: hidden;
   overflow-x: hidden;
 }
@@ -80,6 +80,7 @@ section {
   }
 }
 .first-section .container .socials {
+  padding: 10px;
   width: 40%;
   margin-top: 10px;
   justify-content: space-around;
@@ -89,6 +90,7 @@ section {
   transition: 0.2s;
 }
 .first-section .container .socials img:hover {
+  filter: drop-shadow(0px 0px 10px 5px #3037d6);
   transform: scale(1.2);
 }
 .first-section .container .socials #linkedin {
@@ -176,6 +178,7 @@ section {
 }
 .third-section .skills .left p .mono {
   font-family: monospace;
+  color: #33c7de;
 }
 @media screen and (max-width: 768px) {
   .third-section .skills .left {
@@ -224,11 +227,14 @@ section {
   }
 }
 .fourth-section .container img {
-  width: 50%;
+  width: 70%;
+  box-shadow: 0px 0px 20px 10px #3037d6;
+  border-radius: 10px;
 }
 @media screen and (max-width: 768px) {
   .fourth-section .container img {
-    width: 100%;
+    width: 90%;
+    box-shadow: 0px 0px 10px 5px #3037d6;
   }
 }
 
@@ -258,7 +264,7 @@ footer div {
 footer div p {
   color: #f5f5f5;
   font-size: 12px;
-  font-family: sans-serif;
+  font-family: "Noto sans", sans-serif;
 }
 footer .left p {
   margin-left: 55px;
